--- a/src/App.css
+++ b/src/App.css
@@ -27,10 +27,14 @@
   to { transform: rotate(360deg); }
 }
 
+.container{
+  margin-top: 10px;
+}
 .card {
   text-align: left;
   margin: 10px;
   display: flex;
+  flex-direction: row;
 }
 
 .description{
@@ -42,9 +46,4 @@
   height: 75px;
 }
 
-.container {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
 
-}
